# xinfeng

./: README.md
proof-of-concept/: test-basic.xf  test-errors.xf  test-feng.xf  test-id.xf  test-match.xf  test-min.xf
proof-of-concept/tools/: g
proof-of-concept/xinfeng-poc/: xinfeng-poc.cabal
proof-of-concept/xinfeng-poc/app/: Main.hs
proof-of-concept/xinfeng-poc/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
proof-of-concept/xinfeng-poc/src/Xinfeng/: Checker.hs  Eval.hs  Parser.hs  Syntax.hs
proof-of-concept/xinfeng-poc/test/: RunTests.hs
spec/: representation.md  seed.md
