cabal-version:      3.0
name:               xinfeng-poc
version:            0.1.0.0
synopsis:           信风 — proof of concept minimal kernel
description:
  A minimal runnable kernel for the 信风 language.
  Parses definitions, type-checks, and evaluates.
license:            BSD-2-Clause
author:             风 & 天空
maintainer:         feng@fengtrace.me
build-type:         Simple

executable xinfeng-poc
  main-is:          Main.hs
  hs-source-dirs:   app, src
  build-depends:
    , base        >=4.17
    , parsec      >=3.1
    , containers >=0.6
  default-language: Haskell2010
  ghc-options:      -Wall
