cabal-version:      3.0
name:               xinfeng-poc
version:            0.1.0.0
synopsis:           信风 — proof of concept minimal kernel
description:
  A minimal runnable kernel for the 信风 language.
  Parses definitions, type-checks, and evaluates.
license:            BSD-2-Clause
author:             风 & 天空
maintainer:         feng@fengtrace.me
build-type:         Simple

executable xinfeng-poc
  main-is:          Main.hs
  hs-source-dirs:   app, src
  other-modules:
    , Xinfeng.Syntax
    , Xinfeng.Parser
    , Xinfeng.Checker
    , Xinfeng.Eval
  build-depends:
    , base        >=4.17
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite xinfeng-tests
  type:             exitcode-stdio-1.0
  main-is:          RunTests.hs
  hs-source-dirs:   test, src
  other-modules:
    , Xinfeng.Syntax
    , Xinfeng.Parser
    , Xinfeng.Checker
    , Xinfeng.Eval
  build-depends:
    , base        >=4.17
  default-language: Haskell2010
